--- a/EmbedlyTest-Info.plist
+++ b/EmbedlyTest-Info.plist
@@ -10,6 +10,11 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>icon114x114.png</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>icon114x114.png</string>
+		<string>icon57x57.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.yourcompany.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
